va con centrado

--- a/Source/Conference/IVJIAAIS2017/PosterJIAAIS/PosterJIAAIS.tex
+++ b/Source/Conference/IVJIAAIS2017/PosterJIAAIS/PosterJIAAIS.tex
@@ -286,12 +286,13 @@ Empirical Influence Function shows the performance of the estimator $\widehat{\a
 \section*{\textcolor{blue}{Number of cases of no convergence}}
 An algorithm is considered to converge if it finds an estimate $\widehat{\alpha}$ larger than $-20$.
 
+\vspace{0.3cm}
 \begin{spacing}{0.9}
 \[
 \small{
 \begin{array}{r r r r}
 \begin{tabulary}{5cm}{ 
-	c|@{\hspace{0.9cm}} c @{\hspace{0.7cm}} c @{\hspace{0.7cm}} c @{\hspace{0.7cm}} c @{\hspace{0.5cm}} }
+	r|@{\hspace{0.9cm}} r @{\hspace{0.7cm}} r @{\hspace{0.7cm}} r @{\hspace{0.7cm}} r @{\hspace{0.5cm}} }
 \hline	
 $\alpha$ & $n$ & $\widehat{\alpha}_{\text{\tiny{ML}}}$ 
 & $\widehat{\alpha}_{\textup{\tiny $\Gamma$}}$
