--- a/Source/Thesis/plan de tesis actualizado.tex
+++ b/Source/Thesis/plan de tesis actualizado.tex
@@ -10,30 +10,47 @@
 \usepackage{amsfonts}
 \usepackage{subfigure}
 \usepackage{enumerate}
+\usepackage{color}
+\usepackage[normalem]{ulem} %%%% para tachar texto
 
-\voffset-2.5cm 
-\hoffset 0.0cm 
-\topmargin 2cm
-\oddsidemargin-5mm% 
-\evensidemargin 0mm
-\textwidth=17cm
-\textheight=24.2cm 
-%\columnsep=0.8cm
-\pagestyle{empty}
-\renewcommand{\baselinestretch}{1}  
-\sloppy  
-\widowpenalty100000   
-\clubpenalty100000
-\parskip 2mm   
+\usepackage{geometry}
+\geometry{
+	a4paper,
+	total={170mm,257mm},
+	right=20mm,
+	left=20mm,
+	top=20mm,
+	bottom=20mm
+}
 
+
+
+%\voffset-2.5cm 
+%\hoffset 0.0cm 
+%\topmargin 2cm
+%\oddsidemargin-5mm% 
+%\evensidemargin 0mm
+%\textwidth=17cm
+%\textheight=24.2cm 
+%%\columnsep=0.8cm
+%\pagestyle{empty}
+%\renewcommand{\baselinestretch}{1}  
+%\sloppy  
+%\widowpenalty100000   
+%\clubpenalty100000
+%\parskip 2mm   
+
+
+\title{\textbf{\huge Plan de tesis}\\
+\medskip 
+\textbf{\huge Estimación de parámetros en imágenes con ruido speckle}}
+\author{\Large Julia Cassetti}
+ 
 \begin{document}
 
+\date{} % <--- leave date empty
+\maketitle %% <-- you need this for the first page
 
-\begin{center}
-\text{\textbf{\large Plan de tesis}}\\
-\medskip 
-\text{\textbf{\large Estimación de parámetros en imágenes con ruido speckle}}
-\end{center}  
 
 \section{Objetivos}
 Referidos al propósito de la investigación. El objetivo específico refleja el resultado esperable en el plazo previsto para la realización del plan. El objetivo general, al cual contribuye el objetivo específico, se orienta hacia resultados posibles de obtener en el largo plazo en la línea de investigación mediante trabajos ulteriores no incluidos en el plan.
@@ -44,7 +61,7 @@ Teoría de la Información y de la Estadística.
 
 \subsection{Objetivos específicos}
 \begin{itemize}
-\item Proponre nuevos estimadores de los parámetros de la distribución que modelan datos provenientes de imágenes SAR.
+\item Proponer nuevos estimadores de los parámetros de la distribución que modelan datos provenientes de imágenes SAR.
 \item Emplear técnicas no paramétricas de estimación junto con  conceptos de  distancias estocásticas en la definición de estos estimadores.
 \item Analizar la robustez de los estimadores propuestos bajo diferentes esquemas de contaminación.
 \item Desarrollar algoritmos rápidos y eficientes, en términos de uso de memoria y de tiempo de proceso, que permitan la interpretación automática de imágenes SAR.
@@ -54,10 +71,10 @@ Teoría de la Información y de la Estadística.
 
 %\section{Introducción}
 Los sistemas de Radar (radio detection and ranging: detección y medición de distancias por radio) son instrumentos que, a través de ondas electromagnéticas, detectan un objeto e indican su distancia y posición. 
-Estos instrumentos miden la respuesta del terreno 
+Estos instrumentos miden la respuesta del \textcolor{blue}{blanco}
 % % % ACF No sólo "terreno"; pueden ser barcos, edificios etc. Usar "blancos".
 a la radiación electromagnética emitida en forma de pulsos, el valor de esta respuesta es almacenada para su posterior procesamiento y se utiliza para formar una imagen de la zona de interés. 
-Un Radar de Apertura Sintética (synthetic aperture radar: SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. Mediante este proceso se consigue el mismo rendimiento que se obtendría mediante una antena mucho más grande que la que tiene en realidad, por eso se llaman de apertura sintética. 
+Un Radar de Apertura Sintética (synthetic aperture radar: SAR) es un tipo de sistema que consiste en procesar, mediante algoritmos, la información capturada por la antena del radar. \textcolor{blue}{Debido a la gran velocidad de desplazamiento del vehículo que transporta el radar, la antena del dispositivo SAR  se convierte en una antena virtual mucho más grande que la que tiene en realidad}, por eso se llaman de apertura sintética. 
 % % % ACF ¿Qué "rendimiento"? ¿Sería resolución espacial?
 
 La señal recibida por el radar es un número complejo, a partir de esta señal se forma la imagen. Si consideramos el módulo de la señal recibida decimos que los datos están dados en formato amplitud, en cambio, si utilizamos el cuadrado del módulo de dicha señal diremos los datos están dados en formato intensidad. En esta tesis se trabajará con los datos dados en este último formato.
@@ -107,36 +124,42 @@ Silva et al.~\cite{SilvaCribariFrery:ImprovedLikelihood:Environmetrics} proponen
 Cribari-Neto et al.~\cite{CribariFrerySilva:CSDA} proponen el uso de bootstrap para el mismo fin. 
 Allende et al.~\cite{AllendeFreryetal:JSCS:05} y Bustos et al.~\cite{BustosFreryLucini:Mestimators:2001} plantean mejoras para la estimación del parámetro de textura, pero con foco en su robustez. 
 
-Entre las técnicas de estimación paramétrica clásicas se encuentran las de máxima verosimilitud y momentos. Recientemente en ~\cite{MellinAnalysisPolSAR,BujorTrouveValetNicolas2004,khan2014} se han propuesto estimadores del parámetro de textura basado logcumulants y logmomentos, donde interviene la transforamda de Mellin de la función de densidad. En Tison et al.~\cite{Tison2004} los autores mostraron que los estimadors de los parámetros de la distribución $\mathcal G^0$, para datos de amplitud, mejoran al estimador de máxima verosimilitud.
+Entre las técnicas de estimación paramétrica clásicas se encuentran las de máxima verosimilitud y momentos. Recientemente en ~\cite{MellinAnalysisPolSAR,BujorTrouveValetNicolas2004,khan2014} han propuesto estimadores del parámetro de textura basado logcumulants y logmomentos, donde interviene la transforamda de Mellin de la función de densidad. En Tison et al.~\cite{Tison2004} los autores mostraron que los estimadors de los parámetros de la distribución $\mathcal G^0$, para datos de amplitud, mejoran al estimador de máxima verosimilitud.
 
 Es importante mencionar que, entre las propiedades que se espera que un buen estimador posea, son la consistencia, insesgadez, eficiencia, robustez y normalidad asintótica. Son conocidas las buenas propiedades asintóticas que posee el estimador de máxima verosimilitud. 
-Sin embargo, este estimador no se comporta adecuadamente para el caso donde el tamaño de muestra es chico. 
+Sin embargo, \textcolor{blue}{en algunas situaciones como es el caso de la estimación del parámetro de textura de la distribución $\mathcal G_I^0$}, este estimador no se comporta adecuadamente para el caso donde el tamaño de muestra es chico. 
 % % % ACF Puede no ser verdad siempre.
 Es importante considerar este caso ya que muchos de los métodos de filtrado de imágenes o detección de bordes utilizan máscaras deslizantes de tamaño $3 \times 3$,  $5 \times 5$, $7 \times 7$, $9 \times 9$ or  $11 \times 11$. Por eso es de interés encontrar buenos estimadores de los parámetros de la distribución $\mathcal{G}_I^0$ para el caso de muestras de pequeño tamaño. 
 
 Por otro lado, la teoría de la información ha sido aplicada a los métodos de estadística y probabilidades con éxito~\cite{Liese2006}. 
 Shannon~\cite{Shannon1948} definió la información $I(X,Y)$ entre las variables aleatorias $X$ e $Y$ como una divergencia calculada entre sus densidades de probabilidad. 
-Estas divergencias fueron ampliamente estudiadas por Kullback y Leibler~\cite{KullbackLeibler1951} y por Rényi~\cite{renyi1961}, entre otros. 
+Estas divergencias fueron ampliamente estudiadas por Kullback y Leibler~\cite{KullbackLeibler1951} y por Rényi~\cite{renyi1961} entre otros \textcolor{blue}{y es una medida de la distancia entre dos funciones de densidad}. 
 %El concepto de divergencias como distancias estocásticas se describe detalladamente en~\cite{Liese2006}, así como también sus propiedades.  
 % Mejorar las referencia en eventos con artigos en periódicos
 Este tipo de divergencias poseen múltiples aplicaciones en procesamiento de señales e imágenes~\cite{4218961}, análisis de imágenes médicas~\cite{5599869},
 clasificación de texturas~\cite{1246862}, restauración de imágenes~\cite{1224731} e incluso en detección automática de regiones con diferente grado de rugosidad en imágenes SAR~\cite{6377288,ClassificationPolSARSegmentsMinimizationWishartDistances}.
 
 % % % ACF Hace falta conectar mejor el párrafo anterior con este
-Los estimadores del kernel clásico~\cite{Silverman1986} son populares en la estimación de la función de densidad.
-Sin embargo, si la densidad a estimar tiene soporte acotado, estos estimadores pueden dar estimaciones sesgadas en los bordes del soporte porque asignan probabilidad positiva fuera del soporte de la función.
-Una alternativa para mejorar esto es utilizar kernels asimétricos, Chen~\cite{chen1999, chensx2000} presenta núcleos Beta y Gamma, Scaillet~\cite {Scaillet2004} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), Bouezmarni et al.~\cite {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En~\cite{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados~\cite{Scaillet2004}.
+\textcolor{red}{\sout{Los estimadores del kernel clásico~\mbox{\cite{Silverman1986}} son populares en la estimación de la función de densidad. Sin embargo, si la densidad a estimar tiene soporte acotado, estos estimadores pueden dar estimaciones sesgadas en los bordes del soporte porque asignan probabilidad positiva fuera del soporte de la función. 
+Una alternativa para mejorar esto es utilizar kernels asimétricos, Chen~\mbox{\cite{chen1999, chensx2000}} presenta núcleos Beta y Gamma, Scaillet~\mbox{\cite{Scaillet2004}} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), Bouezmarni et al.~\cite {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En~\cite{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados~\cite{Scaillet2004}.}}
 	
 	
 \section{Hipótesis de trabajo}
-En esta tesis se propone estudiar un nuevo  estimador del parámetro de textura $\alpha$ de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente. La estimación de $\alpha$, denotada $\widehat\alpha$ se realiza de la siguiente manera:
-Sea $Z_1, \ldots, Z_n$ un conjunto de $n$ variables aleatorias independientes e idénticamente distribuidas que siguen el modelo $\mathcal{G}_I^{0}(\alpha,\gamma^*,L) $, donde $\gamma^* $ se elige de modo que $E(Z)= 1$.
+En esta tesis se propone estudiar un nuevo  estimador del parámetro de textura $\alpha$ de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente. 
+
+\textcolor{blue}{Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran} los estimadores de kernel clásico, con kernel simétrico~\cite{Silverman1986} \textcolor{blue}{que} son populares en la estimación de la función de densidad.
+Sin embargo, si la densidad a estimar tiene soporte acotado, estos estimadores pueden dar estimaciones sesgadas en los bordes del soporte porque asignan probabilidad positiva fuera del soporte de la función.
+Una alternativa para mejorar esto es utilizar kernels asimétricos, Chen~\cite{chen1999, chensx2000} presenta núcleos Beta y Gamma, Scaillet~\cite {Scaillet2004} introduce núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), Bouezmarni et al.~\cite {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG. En~\cite{Jin2003} los autores proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados~\cite{Scaillet2004}. \textcolor{blue}{En esta tesis se propone estimar la función de densidad subyacente utilizando núcleos asimétricos.}
+
 % % % Esperanza unitaria es algo muy técnico que no debería estar en la propuesta.
-Sea $\widehat{f}_{K}$ una estimación no paramétrica, con núcleo asimétrico $K$, de la función de densidad subyacente. El estimador $\widehat{\alpha}$ está dado por la minimización de la siguiente ecuación:
+
+\textcolor{red}{\sout{Se propone entonces estimar el parámetro $\alpha$, denotado $\widehat\alpha_{\text{\tiny{K}}}$ considerando $Z_1, \ldots, Z_n$ un conjunto de $n$ variables aleatorias independientes e idénticamente distribuidas que siguen el modelo $\mathcal{G}_I^{0}(\alpha,\gamma^*,L) $, donde $\gamma^* $ se elige de modo que $E(Z)= 1$.
+Sea $\widehat{f}_{K}$ una estimación no paramétrica, con núcleo asimétrico $K$, de la función de densidad subyacente. El estimador $\widehat{\alpha}$ está dado por la minimización de la siguiente ecuación:}}
 \begin{align}
-\widehat{\alpha}_{K}= \arg\min_{\alpha} d\big(f_{\mathcal{G}^{0}}(\alpha,\gamma^*, L ), \widehat f_K(z)\big),
+\textcolor{red}{\sout{\widehat{\alpha}_{K}= \arg\min_{\alpha} d\big(f_{\mathcal{G}^{0}}(\alpha,\gamma^*, L ), \widehat f_K(z)\big),}}
 \label{minimization}
 \end{align}
+
 Se comparará el desempeño de este estimador, en términos de sesgo y error cuadrático medio y tasa de convergencia, con los presentes en la literatura. Se estudiarán las propiedades de este estimador, como así también la robustez del mismo bajo diferentes esquemas de contaminación.
 
 %Entre las alternativas no paramétricas de estimación de la función de densidad se encuentra el estimador kernel (núcleo) utilizando núcleos simétricos. Este estimador es ampliamente utilizado y posee buenas propiedades, pero cuando la función de densidad tiene soporte acotado, como es el caso de la $\mathcal{G}_I^0$, utilizar este tipo de núcleos puede conducir a estimaciones sesgadas ya que ellos asignan probabilidad positiva a valores que se encuentran fuera del soporte de la distribución.
