--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -2818,24 +2818,6 @@
   year = {2002}
 }
 
-@ARTICLE{5208318,
-  author = {Nascimento, A.D.C. and Cintra, R.J. and Frery, A.C.},
-  title = {Hypothesis Testing in Speckled Data With Stochastic Distances},
-  journal = {IEEE Transactions on Geoscience and Remote Sensing},
-  year = {2009},
-  volume = {48},
-  pages = {373--385},
-  number = {1},
-  doi = {10.1109/TGRS.2009.2025498},
-  issn = {0196-2892},
-  keywords = {data acquisition;geophysical techniques;maximum likelihood estimation;radar
-	imaging;stochastic systems;arithmetic-geometric distances;coherent
-	illumination;hypothesis testing;maximum likelihood estimation;radar
-	imagery;speckled data;stochastic distances;triangular distance;Contrast
-	measures;image analysis;information theory;multiplicative model;speckle
-	noise;synthetic aperture radar (SAR) imagery;}
-}
-
 @ARTICLE{EdgeDetectionDistancesEntropiesJSTARS,
   author = {Nascimento, A. D. C. and Horta, M. M. and Frery, A. C. and Cintra,
 	R. J.},
@@ -4893,6 +4875,15 @@
 	ISSN={1545-598X},
 	month={Oct},}
 
+@ARTICLE{Tupin2004,
+author={Tison, C.and Nicolas, J.M. and Tupin, F. and Maitre, H.},
+journal={IEEE Transactions on Geoscience and Remote Sensing},
+title={A new statistical model for Markovian classification of urban areas in high-resolution SAR images},
+year={2014},
+volume={42},
+number={10},
+pages={2046--2057},
+}
 
 @article{cao1995minimum,
 	title={Minimum distance density-based estimation},
